<resources>
    <string name="app_name">Delicias da Mamae</string>
    <string name="textView_edit_email_logar">Digite seu e-mail</string>
    <string name="logo_padrao">imagem_logo_padrao</string>
    <string name="textview_edit_senha_logar">Digite sua senha</string>
    <string name="botao_logar">Logar</string>
    <string name="textview_tela_cadastrar_user">Cadastrar-ser!</string>
    <string name="botao">botaoTeste</string>
    <string name="bt_tela_estoque">ESTOQUE</string>
    <string name="bt_add_item_estoque">CADASTRAR ITEM EM ESTOQUE</string>
    <string name="textViewNomeAdapter">Nome:</string>
    <string name="textViewPrecoAdapter">Custo Atual da compra R$:</string>
    <string name="textViewQuantEstoqueAdapter">Quant. Total estoque:</string>
    <string name="textViewQuantPorReceitaAdapter">Quant. Usada na Receita: </string>
    <string name="textViewValorFracionadoAtualAdapter">Valor Fracionado do item atualmente R$:</string>
    <string name="textViewQuantUsadaReceita">Ex: 1 kilo = 1000 gramas(informe as gramas):  </string>
    <string name="edit_add_nome_item_estoque_id">Digite o nome do item</string>
    <string name="edit_add_valor_item_estoque">informe o valor pago no item R$:</string>
    <string name="edit_add_quant_item_estoque">Informe a quantidade do item em estoque</string>
    <string name="textViewInfoUnidMedida">Informe ao lado a quantidade por pacote do item e abaixo selecione a unidade de medida desse item</string>
    <string name="radioButton_gramas_ml_unid">Gramas / ML / Unidade</string>
    <string name="radioButton_litro_kilo">Litros / Kilo</string>
    <string name="textViewInfoQuantUsadaReceita">"Informe a quantidade utilizada por receita em gramas/ML ou unidade"</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="botao_tela_receitas">RECEITAS</string>
    <string name="botao_tela_producao">PRODUÇÃO</string>
    <string name="botao_add_ingrediente_estoque">NOVO INGREDIENTE</string>
    <string name="botao_editar_ingredientes">EDITAR INGREDIENTES</string>
    <string name="botao_tela_nova_receita">NOVA RECEITA</string>
    <string name="botao_tela_receitas_feitas">RECEITAS FEITAS</string>
    <string name="edit_nome_receita">Digite o nome da receita:</string>
    <string name="botao_salvar_nome_receita">SALVAR NOME RECEITA</string>
    <string name="textViewInfoAddIngredienteReceita">Ingredientes em estoque: </string>
    <string name="textViewInfoIngredientesAdicionadosReceita">INGREDIENTES ADICIONADOS: </string>
    <string name="text_valor_fracio_ingrediente_estoque">R$ por receita: </string>
    <string name="textview_nome_ingrediente_adicionado">"NOME: "</string>
    <string name="valorAdicionadoViewAdapter">R$:</string>
    <string name="qnt">QNT:</string>
    <string name="imagemingredienteselecionado">imagemIngredienteSelecionado</string>
    <string name="textView_nomeReceita">Nome Receita</string>
    <string name="textView_custoIngredientesReceita">"Custo Ingredientes: "</string>
    <string name="text_valor_item_add_receita">Valor</string>
    <string name="text_valor_itemAdd_receita">Valor Receita</string>
    <string name="text_valores_add">Valores adicionados R$: </string>
    <string name="cancelar_ingredientes_receita">CANCELAR</string>
    <string name="text_quanto_rende_receita">Quantas porções rende essa receita?</string>
    <string name="text_porcentagem_acrescimo_receita">Quantos % deve ser acrescentado a esta receita, que será o custo das despesas não contabilizadas. Ex: Gás, detergente, mão-de-obra, etc...</string>
    <string name="edit_porcentagem">Porcentagem:</string>
    <string name="edit_porcoes_receita">Porções:</string>
    <string name="botao_proxima_etapa_receita">PROXIMO</string>
    <string name="text_botao_calcular_receita">CALCULAR</string>
    <string name="text_botao_finalizar_receita">FINALIZAR</string>
    <string name="text_valor_total_receita">Valor total da receita R$:</string>
    <string name="text_rendimento_receita_adapter">Rendimento por  fornada:</string>
    <string name="text_rendimento_adapter">Rendimento por fornada</string>
    <string name="fragment_nome_receita_edit">Digite o nome da sua receita</string>
    <string name="porceoes_receita">Digite quanto rendeu essa receita</string>
    <string name="porcent_fragment">Porcentagem a ser acrescentada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_digite_valor_venda">Digite o valor de venda desse bolo</string>
    <string name="texto_data_caixa">DATA:</string>
    <string name="texto_botao_iniciar_caixa">INICIAR DIA</string>
    <string name="texto_botao_encerrar_dia">ENCERRAR DIA</string>
    <string name="texto_botao_compras">COMPRAS</string>
    <string name="texto_radion_button_massas">MASSA</string>
    <string name="texto_radion_button_cobertura">COBERTURA</string>
    <string name="texto_radion_button_receita_completa">RECEITA COMPLETA</string>
    <string name="texto_botao_salvar_nome_da_receita">SALVAR NOME DA RECEITA</string>
    <string name="texto_tela_receita_nova_ingredientes_em_estoque_no_momento">Ingredientes em estoque no momento</string>
    <string name="texto_tela_receita_nova_ingredientes_adicionados_na_receita">Ingredientes adicionados na receita</string>
    <string name="texto_botao_pronto_j_adicionei_os_ingredientes">PRONTO, JÁ ADICIONEI OS INGREDIENTES</string>
    <string name="texto_fragment_receitas_prontas_receitas_completas_cadastradas">RECEITAS COMPLETAS CADASTRADAS</string>
    <string name="texto_fragment_receitas_prontas_massas">MASSAS CADASTRADAS</string>
    <string name="texto_fragment_receitas_prontas_coberturas_cadastradas">COBERTURAS CADASTRADAS</string>
    <string name="texto_fragment_nova_receita">TIPO DE PRODUÇÃO</string>
    <string name="texto_botao_combinar">COMBINAR MASSA E COBERTURA</string>
    <string name="texto_edit_nome_produto_combinado_receita">Digite o nome do produto para combinar entre Massas e Coberturas</string>
    <string name="texto_salvar_nome_produto_combinado_para_venda">SALVAR NOME</string>
    <string name="texto_expostos_na_vitrini">EXPOSTOS NA VITRINE</string>
    <string name="texto_nome_bolo_exposto_vitrine">NOME DO BOLO</string>
    <string name="texto_valor_venda_bolo_exposto_vitrine">R$:</string>
    <string name="texto_valor_venda_cadastrado" />
    <string name="texto_quant_bolos_exposto_vitrine">UND.</string>
    <string name="texto_quant_exposto_bolo_vitrine" />
    <string name="texto_botao_adicionar_bolo_vitrine">ADICIONAR BOLO NA VITRINE</string>
    <string name="imagem_captureImage" />
    <string name="imagem_captura_foto" />
    <string name="foto_tirada" />
    <string name="texto_bolos_cadastrados_venda">Bolos cadastrados para venda</string>
    <string name="texto_bolos_adicionados_vitrine">Bolos adicionados a vitrine</string>
    <string name="imagem_bolo_cadastrado_venda_add_vitrine_adapter">image_adapter</string>
    <string name="texto_nome_bolo_cadastrado_venda_add_vitrine">NOME:</string>
    <string name="texto_valor_venda_bolo_cadastrado_venda_add_vitrine">Valor venda R$:</string>
    <string name="texto_custo_bolo_cadastrado_venda_add_vitrine">Custo:</string>
    <string name="texto_botao_trocar_foto_bolo_cadastrado_venda">TROCAR FOTO</string>
    <string name="texto_botao_atualizar_bolo_cadastrado_venda">Pronto, já fiz as atualizações necessárias!</string>
    <string name="texto_botao_excluir_bolo_cadastrado_venda">Excluir bolo cadastrado para venda, Permanente</string>
    <string name="Preco">R$:</string>
    <string name="texto_caixa_nao_iniciado">AINDA NÃO FOI IDENTIFICADO BOLOS ADICIONADOS A VITRINE</string>
    <string name="fundo_azul_tela_finalizar_venda" />
    <string name="texto_venda_ifood">VENDA PELO IFOOD</string>
    <string name="texto_botao_venda_loja">VENDA PELA LOJA</string>
    <string name="texto_delicias_da_mamae_toolbar">Delicias da Mamãe</string>
    <string name="botao_voltar_tela">VOLTAR</string>
    <string name="texto_toolbar_finalizar_venda">Finalizar venda</string>
    <string name="texto_ingrediente_adicionados_bolo_venda_finalizar">INGREDIENTES UTILIZADOS</string>
    <string name="texto_botao_bolos_vendidos">BOLOS VENDIDOS</string>
    <string name="texto_nome_bolo_vendido">NOME:</string>
    <string name="texto_valor_venda_bolo">VALOR DE VENDA R$:</string>
    <string name="texto_custo_bolo_vendido">VALOR CUSTO BOLO R$:</string>
    <string name="texto_botao_bolo_vendido">ATUALIZAR INFORMAÇÕES</string>
    <string name="todo">TODO</string>
    <string name="texto_botao_voltar_tela_bolos_vendidos">VOLTAR</string>
    <string name="texto_botao_confirmar_deletar_bolo_vendido_banco">CONFIRMAR EXCLUSÃO</string>
    <string name="texto_botao_cancelar_exclusao_bolo_vendido_banco_id">CANCELAR EXCLUSÃO</string>
    <string name="texto_custo_por_receita_item">Valor Item por Receita:</string>
    <string name="texto_nome_receita_edit">Nome da Receita</string>
    <string name="texto_porcent_servico">Porcentagem Serviço</string>
    <string name="texto_quant_rend_receita_edit">Rendimento por fornada</string>
    <string name="texto_valor_total_ingrediente_receita">Valor total dos Ingredientes</string>
    <string name="texto_valor_total_receita">Valor total da receita</string>
    <string name="texto_botao_salvar_alteracoes_receita_edit">SALVAR ALTERAÇÕES</string>
    <string name="texto_botao_deletar_receita_edit">DELETAR RECEITA</string>
    <string name="texto_botao_cancelar_voltar_tela_producao">CANCELAR/VOLTAR</string>
    <string name="texto_info_lista_ingredientes">Lista de ingredientes adicionados a essa receita</string>
    <string name="texto_nome_ingrediente_receita_pronta">Nome Ingrediente:</string>
    <string name="texto_quant_usada_receita_pronta">quantidade usada receita</string>
    <string name="texto_valor_ingrediente_receita_pronta">Valor do ingrediente nessa receita</string>
    <string name="texto_lista_ingredientes_edit_receita">Lista de ingredientes em estoque</string>
    <string name="texto_valor_caixa_diario">CAIXA DIÁRIO R$</string>
    <string name="texto_troco_caixa_diario">TROCO R$:</string>
    <string name="texto_quantidade_bolos_vendido_diario">BOLOS VENDIDOS HOJE:</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>