<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <TextView
        android:id="@+id/textView59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:text="@string/texto_nome_ingrediente_receita_pronta"
        android:textColor="@color/azul_claro"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nome_ingrediente_receita_pronta_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="3dp"
        android:text="@string/texto_nome_ingrediente_receita_pronta"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textView59"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView59"
        app:layout_constraintTop_toTopOf="@+id/textView59" />

    <TextView
        android:id="@+id/textView64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/texto_quant_usada_receita_pronta"
        android:textColor="@color/azul_claro"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView59"
        app:layout_constraintTop_toBottomOf="@+id/textView59" />

    <TextView
        android:id="@+id/quant_usada_ingrediente_receita_pronta_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="3dp"
        android:text="@string/texto_quant_usada_receita_pronta"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textView64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView64"
        app:layout_constraintTop_toTopOf="@+id/textView64" />

    <TextView
        android:id="@+id/textView68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="3dp"
        android:text="@string/texto_valor_ingrediente_receita_pronta"
        android:textColor="@color/azul_claro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView64"
        app:layout_constraintTop_toBottomOf="@+id/textView64" />

    <TextView
        android:id="@+id/valor_custo_ingrediente_receita_pronta_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="3dp"
        android:text="@string/texto_valor_ingrediente_receita_pronta"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView68"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView68"
        app:layout_constraintTop_toTopOf="@+id/textView68"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>